# omega-project

./: .gitattributes  .gitignore  .roadmap-hash.json  00_INDEX_MASTER.md  00_INDEX_MASTER_PHASE28.md  CERTIFICATION.md  CERTIFICATION_REPORT_2025-12-28_19-01-45.txt  CERTIFICATION_REPORT_2025-12-28_19-04-19.txt  CHANGELOG.md  CHANGELOG_20260116.md  CHECKSUM_REGISTRY_v2_0.txt  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVIDENCE_G1B.md  EVIDENCE_HARDENING.md  EVIDENCE_P1_LLM.md  EVIDENCE_QB.md  EVIDENCE_SH2.md  FINAL_REPORT_PHASE32.md  FROZEN_MODULES.md  HANDOFF_INSTRUCTION.md  HASH_MANIFEST_PHASE_18.md  INDEX_DOSSIER_MASTER_v2_0.md  INSTRUCTIONS_LANCEMENT_URANIUM_v1.1.md  INSTRUCTION_CLAUDE_CODE_10.2.md  INSTRUCTION_CLAUDE_CODE_10.3.md  INSTRUCTION_CLAUDE_CODE_10.4.md  INSTRUCTION_CLAUDE_CODE_10.5.md  INSTRUCTION_CLAUDE_CODE_10.6.md  INSTRUCTION_CLAUDE_CODE_10.7.md  INTEGRATION_GENOME_TO_SENTINEL.md  LICENSE  MyceliumDNA.json  NOTICE  OBSERVABILITY_V_V_CERTIFICATION_v1_0_0.md  OMEGA_ANY_TYPES_BATCH_SUMMARY.md  OMEGA_ANY_TYPES_PHASE1_COMPLETE.md  OMEGA_AUDIT_LISIBLE_COMPLET.md  OMEGA_CLAUDE_CODE_PROMPT_PHASE_D_v2.md  (+211 more)
apps/omega-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/omega-ui/src-tauri/src/: lib.rs  main.rs
omega-ui/src-tauri/: Cargo.toml  tauri.conf.json  user_overrides.json
omega-ui/src-tauri/capabilities/: default.json
omega-ui/src-tauri/runs/RUN_0ACB0D2566E74F4890A8D5E08816082C/: logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/runs/RUN_1F97E509469542AEB0E448864674DFC5/: input.txt  logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/runs/RUN_20251230_234221_42/: logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/runs/RUN_20251230_234327_42/: logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/runs/RUN_20251230_234329_42/: logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/runs/RUN_20251230_234437_99/: logs.txt  manifest.sha256  run.json
omega-ui/src-tauri/src/: aerospace_tests.rs  error.rs  holograph.rs  l3_export_hash.rs  l3_stress_lexicon.rs  l3_stress_tests.rs  lexicon_fr_gold.rs  lib.rs  main.rs
omega-ui/src-tauri/src/ai/: fallback.rs  interface.rs  mock.rs  (+2 more)
(+4675 files in other folders)
