[package]
name = "omega-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
unicode-normalization = "0.1"
sha2 = "0.10"
regex = "1.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true




