[package]
default-run = "omega-ui"
name = "omega-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "omega_ui"
path = "src/lib.rs"

[[bin]]
name = "omega-ui"
path = "src/main.rs"

[[bin]]
name = "omega_run"
path = "src/bin/omega_run.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
unicode-normalization = "0.1"
sha2 = "0.10"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
docx-rs = "0.4"
hex = "0.4.3"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true


